fix matlab activation link and spinner spacing for feedback submit

--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -24,9 +24,10 @@
       border-right: 1px solid rgba(112, 112, 112, 0.25);
     }
   }
-  .btn-link {
-    color: #9d85ef;
-  }
+}
+.btn-link {
+  color: #9d85ef;
+  padding: 2px 0px 2px 0px;
 }
 
 /*
